// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldPopover snapshots should render ButtonIconPopover 1`] = `
<DocumentFragment>
  <div
    class="css-6wln18 Popover Popover--light"
    data-test-box=""
    data-test-popover="popover"
    style="height: 180px; width: 210px; left: -12.5px; top: -48.5px;"
  >
    children
  </div>
</DocumentFragment>
`;

exports[`TextFieldPopover snapshots should render with opened popover 1`] = `
<DocumentFragment>
  <div
    class="css-6wln18 Popover Popover--light Popover--selected Popover--selected--light"
    data-test-box=""
    data-test-popover="popover"
    style="height: 180px; width: 210px; left: -12.5px; top: -48.5px;"
  >
    children
  </div>
</DocumentFragment>
`;
